feat: added modifications for new brazilian new tax system