@@ -56,7 +56,7 @@ public final class CteMgService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.event.mg.prod.CteRecepcaoEventoResult resultMsg = ws.cteRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.event.mg.hom.CTeRecepcaoEventoV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.event.mg.hom.CTeRecepcaoEventoV4) getSoapService().homEvent()).getCTeRecepcaoEventoV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -67,7 +67,7 @@ public final class CteMgService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.event.mg.hom.CteRecepcaoEventoResult resultMsg = ws.cteRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TEvento, TRetEvento> it : data.afterRequest())
@@ -100,7 +100,7 @@ public final class CteMgService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.query_situation.mg.prod.CteConsultaCTResult resultMsg = ws.cteConsultaCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.query_situation.mg.hom.CTeConsultaV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.query_situation.mg.hom.CTeConsultaV4) getSoapService().homQuerySituation()).getCTeConsultaV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -112,7 +112,7 @@ public final class CteMgService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.query_situation.mg.hom.CteConsultaCTResult resultMsg = ws.cteConsultaCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TConsSitCTe, TRetConsSitCTe> it : data.afterRequest())
@@ -146,7 +146,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_gtve.mg.hom.CTeRecepcaoGTVeV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_gtve.mg.hom.CTeRecepcaoGTVeV4) getSoapService().homReceptionGtve()).getCTeRecepcaoGTVeV4Soap12();
 
@@ -159,7 +159,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TGTVe, TRetGTVe> it : data.afterRequest())
@@ -192,7 +192,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_os.mg.hom.CTeRecepcaoOSV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_os.mg.hom.CTeRecepcaoOSV4) getSoapService().homReceptionOs()).getCTeRecepcaoOSV4Soap12();
 
@@ -205,7 +205,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TCTeOS, TRetCTeOS> it : data.afterRequest())
@@ -237,7 +237,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_sync.mg.hom.CTeRecepcaoSincV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_sync.mg.hom.CTeRecepcaoSincV4) getSoapService().homReceptionSync()).getCTeRecepcaoSincV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -249,7 +249,7 @@ public final class CteMgService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TCTe, TRetCTe> it : data.afterRequest())
@@ -279,8 +279,12 @@ public final class CteMgService extends CteAnService {
             msg.getContent().add(envio);
 
             br.inf.portalfiscal.cte4.wsdl.status_service.mg.prod.CteStatusServicoCTResult resultMsg = ws.cteStatusServicoCT(msg);
-
-            retorno = CteUnmarshallerFactory.getInstance().returnStatusService400(XMLUtils.elementToString((Element) resultMsg.getContent().get(0), false).replace("retConsStatServCte", "retConsStatServCTe")).getValue();
+            Object content = resultMsg.getContent().getFirst();
+            if (content instanceof Element) {
+                retorno = CteUnmarshallerFactory.getInstance().returnStatusService400(XMLUtils.elementToString((Element) content, false).replace("retConsStatServCte", "retConsStatServCTe")).getValue();
+            } else {
+                retorno = (TRetConsStatServ) ((JAXBElement<?>) content).getValue();
+            }
         } else {
             br.inf.portalfiscal.cte4.wsdl.status_service.mg.hom.CTeStatusServicoV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.status_service.mg.hom.CTeStatusServicoV4) getSoapService().homStatusService()).getCTeStatusServicoV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -290,8 +294,12 @@ public final class CteMgService extends CteAnService {
 
             br.inf.portalfiscal.cte4.wsdl.status_service.mg.hom.CteStatusServicoCTResult resultMsg = ws.cteStatusServicoCT(msg);
 
-            retorno = CteUnmarshallerFactory.getInstance().returnStatusService400(XMLUtils.elementToString((Element) resultMsg.getContent().get(0), false).replace("retConsStatServCte", "retConsStatServCTe")).getValue();
-
+            Object content = resultMsg.getContent().getFirst();
+            if (content instanceof Element) {
+                retorno = CteUnmarshallerFactory.getInstance().returnStatusService400(XMLUtils.elementToString((Element) content, false).replace("retConsStatServCte", "retConsStatServCTe")).getValue();
+            } else {
+                retorno = (TRetConsStatServ) ((JAXBElement<?>) content).getValue();
+            }
         }
 
         for (AfterWebServiceRequest<TConsStatServ, TRetConsStatServ> it : data.afterRequest())
