@@ -53,7 +53,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.event.pr.prod.CteRecepcaoEventoResult resultMsg = ws.cteRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.event.pr.hom.CTeRecepcaoEventoV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.event.pr.hom.CTeRecepcaoEventoV4) getSoapService().homEvent()).getCTeRecepcaoEventoV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeRecepcaoEventoV4").config(data.config()).build());
@@ -64,7 +64,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.event.pr.hom.CteRecepcaoEventoResult resultMsg = ws.cteRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetEvento) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TEvento, TRetEvento> it : data.afterRequest())
@@ -96,7 +96,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.query_situation.pr.prod.CteConsultaCTResult resultMsg = ws.cteConsultaCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.query_situation.pr.hom.CTeConsultaV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.query_situation.pr.hom.CTeConsultaV4) getSoapService().homQuerySituation()).getCTeConsultaV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeConsultaV4").config(data.config()).build());
@@ -108,7 +108,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.query_situation.pr.hom.CteConsultaCTResult resultMsg = ws.cteConsultaCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsSitCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TConsSitCTe, TRetConsSitCTe> it : data.afterRequest())
@@ -141,7 +141,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_gtve.pr.hom.CTeRecepcaoGTVeV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_gtve.pr.hom.CTeRecepcaoGTVeV4) getSoapService().homReceptionGtve()).getCTeRecepcaoGTVeV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeRecepcaoGTVeV4").config(data.config()).build());
@@ -153,7 +153,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetGTVe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TGTVe, TRetGTVe> it : data.afterRequest())
@@ -185,7 +185,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_os.pr.hom.CTeRecepcaoOSV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_os.pr.hom.CTeRecepcaoOSV4) getSoapService().homReceptionOs()).getCTeRecepcaoOSV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeRecepcaoOSV4").config(data.config()).build());
@@ -197,7 +197,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTeOS) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TCTeOS, TRetCTeOS> it : data.afterRequest())
@@ -231,7 +231,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.reception_sync.pr.hom.CTeRecepcaoSincV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.reception_sync.pr.hom.CTeRecepcaoSincV4) getSoapService().homReceptionSync()).getCTeRecepcaoSincV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeRecepcaoSincV4").config(data.config()).build());
@@ -245,7 +245,7 @@ public final class CtePrService extends CteAnService {
                 throw new DfeUncheckedException(e);
             }
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetCTe) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TCTe, TRetCTe> it : data.afterRequest())
@@ -276,7 +276,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.status_service.pr.prod.CteStatusServicoCTResult resultMsg = ws.cteStatusServicoCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsStatServ) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsStatServ) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.cte4.wsdl.status_service.pr.hom.CTeStatusServicoV4Soap12 ws = ((br.inf.portalfiscal.cte4.wsdl.status_service.pr.hom.CTeStatusServicoV4) getSoapService().homStatusService()).getCTeStatusServicoV4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).overridePortAddress("https://homologacao.cte.fazenda.pr.gov.br/cte4/CTeStatusServicoV4").config(data.config()).build());
@@ -287,7 +287,7 @@ public final class CtePrService extends CteAnService {
             br.inf.portalfiscal.cte4.wsdl.status_service.pr.hom.CteStatusServicoCTResult resultMsg = ws.cteStatusServicoCT(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = (TRetConsStatServ) ((JAXBElement<?>) resultMsg.getContent().get(0)).getValue();
+                retorno = (TRetConsStatServ) ((JAXBElement<?>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TConsStatServ, TRetConsStatServ> it : data.afterRequest())
