@@ -1,7 +1,5 @@
 package org.dfe.components.sefaz.nfce;
 
-import br.inf.portalfiscal.nfe.event_substitute_cancel.TEnvEvento;
-import br.inf.portalfiscal.nfe.event_substitute_cancel.TRetEnvEvento;
 import br.inf.portalfiscal.nfe.send.*;
 import jakarta.xml.bind.JAXBElement;
 import jakarta.xml.ws.BindingProvider;
@@ -80,7 +78,7 @@ public final class NfceMsService implements NfceService {
             }
             br.inf.portalfiscal.nfce.wsdl.authorization.ms.prod.NfeResultMsg2 resultMsg = ws.nfeAutorizacaoLoteZIP(gzip);
 
-            retorno = ((JAXBElement<TRetEnviNFe>) resultMsg.getContent().get(0)).getValue();
+            retorno = ((JAXBElement<TRetEnviNFe>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.nfce.wsdl.authorization.ms.hom.NFeAutorizacaoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.authorization.ms.hom.NFeAutorizacao4) getSoapService().homAuthorization()).getNfeAutorizacaoSoap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -92,7 +90,7 @@ public final class NfceMsService implements NfceService {
             }
             br.inf.portalfiscal.nfce.wsdl.authorization.ms.hom.NfeResultMsg2 resultMsg = ws.nfeAutorizacaoLoteZIP(gzip);
 
-            retorno = ((JAXBElement<TRetEnviNFe>) resultMsg.getContent().get(0)).getValue();
+            retorno = ((JAXBElement<TRetEnviNFe>) resultMsg.getContent().getFirst()).getValue();
         }
         for (AfterWebServiceRequest<TEnviNFe, TRetEnviNFe> it : data.afterRequest())
             it.process(new After<>(envio.getValue(), retorno, data.config()));
@@ -101,42 +99,42 @@ public final class NfceMsService implements NfceService {
     }
 
     @Override
-    public <T extends SefazRequest<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento, br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento>> Pair<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento, br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento> cancel(T data) throws SecurityException, ValidationException, ProcessException {
-        String xml = data.signer().signEvent(NfMarshallerFactory.getInstance().cancelNfe(data.data()), data.config());
-        JAXBElement<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento> envio = NfUnmarshallerFactory.getInstance().cancelNfe(xml);
+    public <T extends SefazRequest<br.inf.portalfiscal.nfe.event_generic.TEnvEvento, br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento>> Pair<br.inf.portalfiscal.nfe.event_generic.TEnvEvento, br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento> event(T data) throws SecurityException, ValidationException, ProcessException {
+        String xml = data.signer().signEvent(NfMarshallerFactory.getInstance().eventNfe(data.data()), data.config());
+        JAXBElement<br.inf.portalfiscal.nfe.event_generic.TEnvEvento> envio = NfUnmarshallerFactory.getInstance().eventNfe(xml);
 
-        for (Validator<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento> it : data.validators())
+        for (Validator<br.inf.portalfiscal.nfe.event_generic.TEnvEvento> it : data.validators())
             it.valid(new Validation<>(envio.getValue(), xml));
-        for (BeforeWebServiceRequest<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento> it : data.beforeRequest())
+        for (BeforeWebServiceRequest<br.inf.portalfiscal.nfe.event_generic.TEnvEvento> it : data.beforeRequest())
             it.process(new Before<>(envio.getValue(), data.config()));
 
-        br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento retorno = null;
+        br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento retorno = null;
 
         if (data.config().production()) {
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.prod.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.prod.NFeRecepcaoEvento4) getSoapService().prodCancel()).getNfeRecepcaoEventoSoap12();
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.prod.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_generic.ms.prod.NFeRecepcaoEvento4) getSoapService().prodEvent()).getNfeRecepcaoEventoSoap12();
 
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
 
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.prod.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.prod.NfeResultMsg();
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.prod.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_generic.ms.prod.NfeResultMsg();
             msg.getContent().add(envio);
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.prod.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.prod.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento>) resultMsg.getContent().getFirst()).getValue();
         } else {
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.hom.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.hom.NFeRecepcaoEvento4) getSoapService().homCancel()).getNfeRecepcaoEventoSoap12();
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.hom.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_generic.ms.hom.NFeRecepcaoEvento4) getSoapService().homEvent()).getNfeRecepcaoEventoSoap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
 
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.hom.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.hom.NfeResultMsg();
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.hom.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_generic.ms.hom.NfeResultMsg();
             msg.getContent().add(envio);
 
-            br.inf.portalfiscal.nfce.wsdl.event_cancel.ms.hom.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
+            br.inf.portalfiscal.nfce.wsdl.event_generic.ms.hom.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento>) resultMsg.getContent().getFirst()).getValue();
         }
 
-        for (AfterWebServiceRequest<br.inf.portalfiscal.nfe.event_cancel.TEnvEvento, br.inf.portalfiscal.nfe.event_cancel.TRetEnvEvento> it : data.afterRequest())
+        for (AfterWebServiceRequest<br.inf.portalfiscal.nfe.event_generic.TEnvEvento, br.inf.portalfiscal.nfe.event_generic.TRetEnvEvento> it : data.afterRequest())
             it.process(new After<>(envio.getValue(), retorno, data.config()));
 
         return new PairImpl<>(envio.getValue(), retorno);
@@ -162,7 +160,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.inutilization.ms.prod.NfeResultMsg2 resultMsg = ws.nfeInutilizacaoNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetInutNFe>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetInutNFe>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.nfce.wsdl.inutilization.ms.hom.NFeInutilizacaoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.inutilization.ms.hom.NFeInutilizacao4) getSoapService().homInutilization()).getNfeInutilizacaoSoap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -173,7 +171,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.inutilization.ms.hom.NfeResultMsg2 resultMsg = ws.nfeInutilizacaoNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetInutNFe>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetInutNFe>) resultMsg.getContent().getFirst()).getValue();
         }
         for (AfterWebServiceRequest<TInutNFe, TRetInutNFe> it : data.afterRequest())
             it.process(new After<>(envio.getValue(), retorno, data.config()));
@@ -201,7 +199,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.query_protocol.ms.prod.NfeResultMsg resultMsg = ws.nfeConsultaNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsSitNFe>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetConsSitNFe>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.nfce.wsdl.query_protocol.ms.hom.NFeConsultaProtocoloSoap ws = ((br.inf.portalfiscal.nfce.wsdl.query_protocol.ms.hom.NFeConsultaProtocolo4) getSoapService().homQueryProtocol()).getNfeConsultaProtocolo4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -212,7 +210,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.query_protocol.ms.hom.NfeResultMsg resultMsg = ws.nfeConsultaNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsSitNFe>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetConsSitNFe>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TConsSitNFe, TRetConsSitNFe> it : data.afterRequest())
@@ -222,42 +220,7 @@ public final class NfceMsService implements NfceService {
 
     @Override
     public <T extends SefazRequest<TConsReciNFe, TRetConsReciNFe>> Pair<TConsReciNFe, TRetConsReciNFe> queryReceipt(T data) throws SecurityException, ValidationException, ProcessException {
-        String xml = NfMarshallerFactory.getInstance().queryReceiptNfe(data.data());
-        JAXBElement<TConsReciNFe> envio = NfUnmarshallerFactory.getInstance().queryReceiptNfe(xml);
-
-        for (Validator<TConsReciNFe> it : data.validators()) it.valid(new Validation<>(envio.getValue(), xml));
-
-        for (BeforeWebServiceRequest<TConsReciNFe> it : data.beforeRequest())
-            it.process(new Before<>(envio.getValue(), data.config()));
-
-        TRetConsReciNFe retorno = null;
-
-        if (data.config().production()) {
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.prod.NFeRetAutorizacaoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.prod.NFeRetAutorizacao4) getSoapService().prodReturnAuthorization()).getNfeRetAutorizacaoSoap12();
-            data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
-
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.prod.NfeDadosMsg msg = new br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.prod.NfeDadosMsg();
-            msg.getContent().add(envio);
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.prod.NfeResultMsg resultMsg = ws.nfeRetAutorizacaoLote(msg);
-
-            if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsReciNFe>) resultMsg.getContent().get(0)).getValue();
-        } else {
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.hom.NFeRetAutorizacaoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.hom.NFeRetAutorizacao4) getSoapService().homReturnAuthorization()).getNfeRetAutorizacaoSoap12();
-            data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
-
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.hom.NfeDadosMsg msg = new br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.hom.NfeDadosMsg();
-            msg.getContent().add(envio);
-
-            br.inf.portalfiscal.nfce.wsdl.return_authorization.ms.hom.NfeResultMsg resultMsg = ws.nfeRetAutorizacaoLote(msg);
-
-            if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsReciNFe>) resultMsg.getContent().get(0)).getValue();
-        }
-
-        for (AfterWebServiceRequest<TConsReciNFe, TRetConsReciNFe> it : data.afterRequest())
-            it.process(new After<>(envio.getValue(), retorno, data.config()));
-        return new PairImpl<>(envio.getValue(), retorno);
+        throw new DfeUncheckedException("not implemented for UF");
     }
 
 
@@ -283,7 +246,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.status_service.ms.prod.NfeResultMsg resultMsg = ws.nfeStatusServicoNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsStatServ>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetConsStatServ>) resultMsg.getContent().getFirst()).getValue();
         } else {
             br.inf.portalfiscal.nfce.wsdl.status_service.ms.hom.NFeStatusServico4 ws = ((br.inf.portalfiscal.nfce.wsdl.status_service.ms.hom.NFeStatusServico4_Service) getSoapService().homQueryStatusService()).getNfeStatusServico4Soap12();
             data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
@@ -294,7 +257,7 @@ public final class NfceMsService implements NfceService {
             br.inf.portalfiscal.nfce.wsdl.status_service.ms.hom.NfeResultMsg resultMsg = ws.nfeStatusServicoNF(msg);
 
             if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetConsStatServ>) resultMsg.getContent().get(0)).getValue();
+                retorno = ((JAXBElement<TRetConsStatServ>) resultMsg.getContent().getFirst()).getValue();
         }
 
         for (AfterWebServiceRequest<TConsStatServ, TRetConsStatServ> it : data.afterRequest())
@@ -302,50 +265,6 @@ public final class NfceMsService implements NfceService {
 
         return new PairImpl<>(envio.getValue(), retorno);
     }
-
-
-    @Override
-    public <T extends SefazRequest<TEnvEvento, TRetEnvEvento>> Pair<TEnvEvento, TRetEnvEvento> substituteCancel(T data) throws SecurityException, ValidationException, ProcessException {
-        String xml = data.signer().signEvent(NfMarshallerFactory.getInstance().substituteCancelNfe(data.data()), data.config());
-        JAXBElement<TEnvEvento> envio = NfUnmarshallerFactory.getInstance().substituteCancelNfe(xml);
-
-        for (Validator<TEnvEvento> it : data.validators())
-            it.valid(new Validation<>(envio.getValue(), xml));
-        for (BeforeWebServiceRequest<TEnvEvento> it : data.beforeRequest())
-            it.process(new Before<>(envio.getValue(), data.config()));
-
-        TRetEnvEvento retorno = null;
-
-        if (data.config().production()) {
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.prod.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.prod.NFeRecepcaoEvento4) getSoapService().prodSubstituteCancel()).getNfeRecepcaoEventoSoap12();
-
-            data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
-
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.prod.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.prod.NfeResultMsg();
-            msg.getContent().add(envio);
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.prod.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
-
-            if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetEnvEvento>) resultMsg.getContent().get(0)).getValue();
-        } else {
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.hom.NFeRecepcaoEventoSoap ws = ((br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.hom.NFeRecepcaoEvento4) getSoapService().homSubstituteCancel()).getNfeRecepcaoEventoSoap12();
-            data.configureProvider().configure(ProviderConfig.builder().port((BindingProvider) ws).config(data.config()).build());
-
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.hom.NfeResultMsg msg = new br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.hom.NfeResultMsg();
-            msg.getContent().add(envio);
-
-            br.inf.portalfiscal.nfce.wsdl.event_substitute_cancel.ms.hom.NfeResultMsg2 resultMsg = ws.nfeRecepcaoEvento(msg);
-
-            if (!resultMsg.getContent().isEmpty())
-                retorno = ((JAXBElement<TRetEnvEvento>) resultMsg.getContent().get(0)).getValue();
-        }
-
-        for (AfterWebServiceRequest<TEnvEvento, TRetEnvEvento> it : data.afterRequest())
-            it.process(new After<>(envio.getValue(), retorno, data.config()));
-
-        return new PairImpl<>(envio.getValue(), retorno);
-    }
-
 
     @Override
     public boolean allow(UF uf, Environment environment, NFEmissionType emissionType) {
